--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "cSpell.words": [
         "Enoent",
         "println",
-        "simplifile"
+        "simplifile",
+        "submatches"
     ],
     "editor.tabSize": 2
 }
