--- a/gleam.toml
+++ b/gleam.toml
@@ -19,6 +19,7 @@ argv = ">= 1.0.2 and < 2.0.0"
 gleam_yielder = ">= 1.1.0 and < 2.0.0"
 gleam_json = ">= 2.1.0 and < 3.0.0"
 gleam_regexp = ">= 1.0.0 and < 2.0.0"
+envoy = ">= 1.0.2 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
