--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "antinodes",
         "coef",
         "Enoent",
+        "neighbour",
         "neighbours",
         "println",
         "simplifile",
